2005-02-25 Alain Magloire
	Fix PR 69572: Key binding action for Matching Bracket ... Ctrl+Shift+P
	* src/org/eclipse/cdt/internal/ui/ICHelpContextIds.java
	* src/org/eclipse/cdt/internal/ui/editor/CEditor.java
	+ src/org/elcipse/cdt/internal/ui/editor/GotoMatchingBracketAction.java
	* src/org/eclipse/cdt/internal/ui/editor/ICEditorActionDefinitionIds.java
	* plugin.properties
	* plugin.xml

2005-02-25 Alain Magloire
	Fix PR 86718: Dialog shows twice
	* src/org/eclipse/cdt/internal/ui/cview/OpenProjectGroup.java
	* src/org/eclipse/cdt/internal/ui/cview/RefactorActionGroup.java

2005-02-25 Alain Magloire
	Fix for PR 45666: Adding Block comment mneu in the CEditor "/* */"
	* src/org/eclipse/cdt/internal/ui/actions/RemoveBlockCommentAction.java
	* src/org/eclipse/cdt/internal/ui/editor/CEditor.java
	* NEWS
	
2005-02-25 Alain Magloire
	Fix PR 86647: remove the hyperlink preference page in the CEditor preference
	Use the Text Editors
	* src/org/eclipse/cdt/internal/ui/editor/CEditor.java
	+ src/org/eclipse/cdt/internal/ui/editor/CElementHyperlink.java
	= src/org/eclipse/cdt/internal/ui/editor/CElementHperlinkDetector.java
	- src/org/eclipse/cdt/internal/ui/editor/IPositionManager.java
	- src/org/eclipse/cdt/internal/ui/editor/MouseClickListener.java
	* src/org/eclipse/cdt/internal/ui/preferences/CEditorPreferencePage.java
	* src/org/eclipse/cdt/internal/ui/preferences/PreferencesMessages.properties
	* src/org/eclipse/cdt/internal/ui/text/CSourceViewerConfiguration.java

2005-02-25 Alain Magloire
	Fix PR 86655: adds a link to the Text Editor preference
	Remove some warning, WorkbenchHelp was deprecated.
	* src/org/eclipse/cdt/internal/ui/editor/CEditor.java
	* src/org/eclipse/cdt/internal/ui/preferences/AbstractPreferencePage.java
	* src/org/eclipse/cdt/internal/ui/preferences/AppearancePreferencePage.java
	* src/org/eclipse/cdt/internal/ui/preferences/CEditorHoverConfigurationBlock.java
	* src/org/eclipse/cdt/internal/ui/preferences/CEditorPreferencePage.java