@@ -13,17 +13,17 @@ GlobalVariables.variable.description.user=User name
 
 JavaDocContextType.variable.description.file=Filename of compilation unit
 
-JavaContextType.variable.description.file=Filename of compilation unit
-JavaContextType.variable.description.array=A proposal for an array
-JavaContextType.variable.description.array.type=A proposal for the element type of an array
-JavaContextType.variable.description.array.element=A proposal for the element name of an array
-JavaContextType.variable.description.index=A proposal for an index (int)
-JavaContextType.variable.description.collector=A proposal for a collector (java.util.Collector)
-JavaContextType.variable.description.iterator=A proposal for an iterator (java.util.Iterator)
-JavaContextType.variable.description.arguments=Method arguments (evaluates to empty string)
-JavaContextType.variable.description.enclosing.method=Enclosing method name
-JavaContextType.variable.description.enclosing.type=Enclosing type name
-JavaContextType.variable.description.enclosing.package=Enclosing package name
-JavaContextType.variable.description.enclosing.project=Enclosing project name
-JavaContextType.variable.description.enclosing.method.arguments=Argument names of enclosing method
-JavaContextType.variable.description.return.type=Enclosing method return type
+CContextType.variable.description.file=Filename of compilation unit
+CContextType.variable.description.array=A proposal for an array
+CContextType.variable.description.array.type=A proposal for the element type of an array
+CContextType.variable.description.array.element=A proposal for the element name of an array
+CContextType.variable.description.index=A proposal for an index (int)
+CContextType.variable.description.collector=A proposal for a collector (java.util.Collector)
+CContextType.variable.description.iterator=A proposal for an iterator (java.util.Iterator)
+CContextType.variable.description.arguments=Method arguments (evaluates to empty string)
+CContextType.variable.description.enclosing.method=Enclosing method name
+CContextType.variable.description.enclosing.type=Enclosing type name
+CContextType.variable.description.enclosing.package=Enclosing package name
+CContextType.variable.description.enclosing.project=Enclosing project name
+CContextType.variable.description.enclosing.method.arguments=Argument names of enclosing method
+CContextType.variable.description.return.type=Enclosing method return type
