@@ -1,3 +1,15 @@
+/*******************************************************************************
+ * Copyright (c) 2000, 2004, 2005 IBM Corporation and others.
+ * All rights reserved. This program and the accompanying materials 
+ * are made available under the terms of the Common Public License v1.0
+ * which accompanies this distribution, and is available at
+ * http://www.eclipse.org/legal/cpl-v10.html
+ * 
+ * Contributors:
+ *     IBM Corporation - initial API and implementation
+ *     QNX Software System
+ *******************************************************************************/
+
 package org.eclipse.cdt.internal.corext.template.c;
 
 /*
