@@ -1,16 +1,24 @@
+/*******************************************************************************
+ * Copyright (c) 2000, 2004, 2005 IBM Corporation and others.
+ * All rights reserved. This program and the accompanying materials 
+ * are made available under the terms of the Common Public License v1.0
+ * which accompanies this distribution, and is available at
+ * http://www.eclipse.org/legal/cpl-v10.html
+ * 
+ * Contributors:
+ *     IBM Corporation - initial API and implementation
+ *     QNX Software System
+ *******************************************************************************/
+
 package org.eclipse.cdt.internal.corext.template.c;
 
+import org.eclipse.cdt.core.model.ICElement;
+import org.eclipse.cdt.core.model.IFunctionDeclaration;
 import org.eclipse.cdt.core.model.ITranslationUnit;
 import org.eclipse.jface.text.IDocument;
 import org.eclipse.jface.text.templates.TemplateContext;
 import org.eclipse.jface.text.templates.TemplateContextType;
 import org.eclipse.jface.text.templates.TemplateVariableResolver;
-
-/*
- * (c) Copyright IBM Corp. 2000, 2001.
- * All Rights Reserved.
- */
-
 
 /**
  * Compilation unit context type.
@@ -28,111 +36,106 @@ public abstract class TranslationUnitContextType extends TemplateContextType {
 	
 	protected static class ReturnType extends TemplateVariableResolver {
 	 	public ReturnType() {
-	 	 	super("return_type", TemplateMessages.getString("JavaContextType.variable.description.return.type")); //$NON-NLS-1$ //$NON-NLS-2$
+	 	 	super("return_type", TemplateMessages.getString("CContextType.variable.description.return.type")); //$NON-NLS-1$ //$NON-NLS-2$
 	 	}
-	 	public String evaluate(TemplateContext context) {
-			/* IJavaElement element= ((TranslationUnitContext) context).findEnclosingElement(IJavaElement.METHOD);
-			if (element == null)
+	 	public String resolve(TemplateContext context) {
+			ICElement element= ((TranslationUnitContext) context).findEnclosingElement(ICElement.C_METHOD);
+			if (element == null) {
+				element= ((TranslationUnitContext) context).findEnclosingElement(ICElement.C_FUNCTION);
+			}
+			if (element == null) {
 				return null;
+			}
 
-			try {
-				return Signature.toString(((IMethod) element).getReturnType());
-			} catch (JavaModelException e) {
-				return null;
-			} */
+			if (element instanceof IFunctionDeclaration) {
+				return ((IFunctionDeclaration) element).getReturnType();
+			}
 			return null;
 		}
-		public boolean isResolved(TemplateContext context) {
-			return evaluate(context) != null;
-		}		
 	}
 
 	protected static class File extends TemplateVariableResolver {
 		public File() {
-			super("file", TemplateMessages.getString("JavaContextType.variable.description.file")); //$NON-NLS-1$ //$NON-NLS-2$
+			super("file", TemplateMessages.getString("CContextType.variable.description.file")); //$NON-NLS-1$ //$NON-NLS-2$
 		}
-		public String evaluate(TemplateContext context) {
-			//ICompilationUnit unit= ((TranslationUnitContext) context).getCompilationUnit();
+		public String resolve(TemplateContext context) {
+			ITranslationUnit unit= ((TranslationUnitContext) context).getTranslationUnit();
 			
-			//return (unit == null) ? null : unit.getElementName();
-			return null;
+			return (unit == null) ? null : unit.getElementName();
 		}
-		public boolean isResolved(TemplateContext context) {
-			return evaluate(context) != null;
-		}		
 	}
 
-	protected static class EnclosingJavaElement extends TemplateVariableResolver {
+	protected static class EnclosingCElement extends TemplateVariableResolver {
 		protected final int fElementType;
 		
-		public EnclosingJavaElement(String name, String description, int elementType) {
+		public EnclosingCElement(String name, String description, int elementType) {
 			super(name, description);
 			fElementType= elementType;
 		}
-		public String evaluate(TemplateContext context) {
-			/*IJavaElement element= ((TranslationUnitContext) context).findEnclosingElement(fElementType);
-			return (element == null) ? null : element.getElementName(); */
-			return null;			
-		}
-		public boolean isResolved(TemplateContext context) {
-			return evaluate(context) != null;
+		public String resolve(TemplateContext context) {
+			ICElement element= ((TranslationUnitContext) context).findEnclosingElement(fElementType);
+			return (element == null) ? null : element.getElementName();
 		}
 	}
 	
-	protected static class Method extends EnclosingJavaElement {
+	protected static class Method extends EnclosingCElement {
 		public Method() {
-			//super("enclosing_method", TemplateMessages.getString("JavaContextType.variable.description.enclosing.method"), IJavaElement.METHOD);
-			super("enclosing_method", TemplateMessages.getString("JavaContextType.variable.description.enclosing.method"), 0); //$NON-NLS-1$ //$NON-NLS-2$
+			super("enclosing_method", TemplateMessages.getString("CContextType.variable.description.enclosing.method"), ICElement.C_METHOD); //$NON-NLS-1$ //$NON-NLS-2$
 		}
 	}
 
-	protected static class Type extends EnclosingJavaElement {
+	/*
+	protected static class Type extends EnclosingCElement {
 		public Type() {
-			super("enclosing_type", TemplateMessages.getString("JavaContextType.variable.description.enclosing.type"), 0); //$NON-NLS-1$ //$NON-NLS-2$
+			super("enclosing_type", TemplateMessages.getString("CContextType.variable.description.enclosing.type"), 0); //$NON-NLS-1$ //$NON-NLS-2$
 		}
 	}
-/*
-	protected static class SuperClass extends EnclosingJavaElement {
+	protected static class SuperClass extends EnclosingCElement {
 		public Type() {
-			super("super_class", TemplateMessages.getString("JavaContextType.variable.description.type"), IJavaElement.TYPE);
+			super("super_class", TemplateMessages.getString("CContextType.variable.description.type"), IJavaElement.TYPE);
 		}
 	}
-*/
-	protected static class Package extends EnclosingJavaElement {
+
+	protected static class Package extends EnclosingCElement {
 		public Package() {
-			super("enclosing_package", TemplateMessages.getString("JavaContextType.variable.description.enclosing.package"), 0); //$NON-NLS-1$ //$NON-NLS-2$
-		}
-	}	
-
-	protected static class Project extends EnclosingJavaElement {
-		public Project() {
-			super("enclosing_project", TemplateMessages.getString("JavaContextType.variable.description.enclosing.project"), 0); //$NON-NLS-1$ //$NON-NLS-2$
-		}
-	}	
-/*
-	protected static class Project2 extends TemplateVariable {
-		public Project2() {
-			super("project", TemplateMessages.getString("JavaContextType.variable.description.project"));
-		}
-		public String evaluate(TemplateContext context) {
-			ICompilationUnit unit= ((JavaContext) context).getUnit();
-			return (unit == null) ? null : unit.getJavaProject().getElementName();
+			super("enclosing_package", TemplateMessages.getString("CContextType.variable.description.enclosing.package"), 0); //$NON-NLS-1$ //$NON-NLS-2$
 		}
 	}	
 */
+//	protected static class Project extends EnclosingCElement {
+//		public Project() {
+//			super("enclosing_project", TemplateMessages.getString("CContextType.variable.description.enclosing.project"), ICElement.C_PROJECT); //$NON-NLS-1$ //$NON-NLS-2$
+//		}
+//	}	
+
+	protected static class Project extends TemplateVariableResolver {
+		public Project() {
+			super("enclosing_project", TemplateMessages.getString("CContextType.variable.description.project"));
+		}
+		public String resolve(TemplateContext context) {
+			ITranslationUnit unit= ((CContext) context).getTranslationUnit();
+			return (unit == null) ? null : unit.getCProject().getElementName();
+		}
+	}	
+
 	protected static class Arguments extends TemplateVariableResolver {
 		public Arguments() {
-			super("enclosing_method_arguments", TemplateMessages.getString("JavaContextType.variable.description.enclosing.method.arguments")); //$NON-NLS-1$ //$NON-NLS-2$
+			super("enclosing_method_arguments", TemplateMessages.getString("CContextType.variable.description.enclosing.method.arguments")); //$NON-NLS-1$ //$NON-NLS-2$
 		}
-		public String evaluate(TemplateContext context) {
-			/*IJavaElement element= ((TranslationUnitContext) context).findEnclosingElement(IJavaElement.METHOD);
-			if (element == null)
-				return null;
-				
-			IMethod method= (IMethod) element;
-			
-			try {
-				String[] arguments= method.getParameterNames();
+		public String resolve(TemplateContext context) {
+			ICElement element= ((TranslationUnitContext) context).findEnclosingElement(ICElement.C_FUNCTION);
+			if (element == null) {
+				element= ((TranslationUnitContext) context).findEnclosingElement(ICElement.C_FUNCTION_DECLARATION);
+				if (element == null) {
+					element= ((TranslationUnitContext) context).findEnclosingElement(ICElement.C_METHOD);
+					if (element == null) {
+						element= ((TranslationUnitContext) context).findEnclosingElement(ICElement.C_METHOD_DECLARATION);
+					}
+				}
+			}
+
+			if (element instanceof IFunctionDeclaration) {
+				String[] arguments= ((IFunctionDeclaration)element).getParameterTypes();
 				StringBuffer buffer= new StringBuffer();
 				
 				for (int i= 0; i < arguments.length; i++) {
@@ -142,24 +145,10 @@ public abstract class TranslationUnitContextType extends TemplateContextType {
 				}
 				
 				return buffer.toString();
-
-			} catch (JavaModelException e) {
-				return null;
-			} */
+			}
 			return null;
 		}
 	}
-
-/*	
-	protected static class Line extends TemplateVariable {
-		public Line() {
-			super("line", TemplateMessages.getString("TranslationUnitContextType.variable.description.line"));
-		}
-		public String evaluate(TemplateContext context) {
-			return ((JavaTemplateContext) context).guessLineNumber();
-		}
-	}
-*/	
 
 	/*
 	 * @see ContextType#ContextType(String)
